force-app/main/default/objects/Folio_de_Descuentos__c/Folio_de_Descuentos__c.object-meta.xml
<CustomObject>
    <description>Solicitar un folio para aplicar descuentos automáticos por un cierto periodo, pedido o proyecto</description>
    <label>Folio de Descuento</label>
    <nameField>
        <label>Nombre de Folio de Descuento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folio de Descuentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>