force-app/main/default/objects/Folio_de_Descuentos__c/fields/asesor_ventas__c.field-meta.xml
<CustomField>
    <fullName>asesor_ventas__c</fullName>
    <formula>Cuenta__r.Owner.FirstName  &amp;  &quot; , &quot;  &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor de Ventas</label>
    <type>Text</type>
</CustomField>