force-app/main/default/objects/Folio_de_Descuentos__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Folio de Descuentos</relationshipLabel>
    <relationshipName>Folio_de_Descuentos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>