force-app/main/default/objects/Folio_de_Descuentos__c/fields/descripcion__c.field-meta.xml
<CustomField>
    <fullName>descripcion__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>