force-app/main/default/objects/Folio_de_Descuentos__c/fields/descuento_aplicado__c.field-meta.xml
<CustomField>
    <fullName>descuento_aplicado__c</fullName>
    <label>Descuento aplicado a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pedido o Cotizacion</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Oportunidad o Proyecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>