force-app/main/default/objects/Folio_de_Descuentos__c/fields/estatus__c.field-meta.xml
<CustomField>
    <fullName>estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Pendiente de autorización</fullName>
            </value>
            <value>
                <fullName>Pendiente de validación</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>