force-app/main/default/objects/Folio_de_Descuentos__c/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <label>Folio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>