force-app/main/default/objects/Folio_de_Descuentos__c/fields/Monto_de_la_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_la_Oportunidad__c</fullName>
    <label>Monto de la Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>