force-app/main/default/objects/Folio_de_Descuentos__c/fields/Monto_Facturado_al_termino_del_Folio__c.field-meta.xml
<CustomField>
    <fullName>Monto_Facturado_al_termino_del_Folio__c</fullName>
    <label>Monto Facturado al termino del Folio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>