force-app/main/default/objects/Folio_de_Descuentos__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <defaultValue>&quot;La información contenida en descripción marca las características,  particularidades y generalidades de aplicación de los descuentos o precios solicitados,  y por consiguiente, aquellos puntos que no se encuentren asentados en la presente solicitud NO PODRÁN SER APLICADOS. Únicamente podrán hacerse extensivos los descuentos a los complementos de un sistema de acuerdo a previo análisis.&quot;</defaultValue>
    <label>Nota</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>