force-app/main/default/objects/Folio_de_Descuentos__c/fields/num_referencia__c.field-meta.xml
<CustomField>
    <fullName>num_referencia__c</fullName>
    <label>Número de Referencia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>