force-app/main/default/objects/Folio_de_Descuentos__c/fields/T_rminos_y_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>T_rminos_y_Condiciones__c</fullName>
    <defaultValue>&quot;El descuento será aplicado específicamente al cliente, pedido, cotización, producto, proyecto u oportunidad mencionada. La vigencia indicada en CRM para Oportunidades y Proyectos será considerada por el personal responsable como fecha de vigencia para esta solicitud. En caso de no asentar en la presente solicitud la vigencia o en SAP y CRM, será determinado como tiempo máximo Seis meses para Clientes, Productos, Oportunidades y Proyectos y; 15 días para pedidos y cotizaciones, previo análisis de caso. El tiempo máximo de vigencia por solicitud es de un año. La fecha de vigencia asentada en cada solicitud será calculada a partir de la recepción del presente formato, por lo que una vez concluida la vida de este folio, se tendrá que realizar una solicitud de renovación. El personal responsable del proceso, deberá adjuntar la evidencia necesaria a este documento, tal como capturas de pantallas del PDF o documento generado en SAP y/o CRM y en caso de existir algún comunicado, será adjuntado el documento correspondiente. Los precios están sujetos a cambios sin previo aviso a excepción de aquellos precios fijados conforme a la vigencia establecida en la presente solicitud. La aplicación de precios especiales correspondientes a colores fuera de línea deberá contar en todo momento con la autorización del responsable de línea vía correo. La aplicación de precios especiales para productos especiales fuera de línea sin precio en sistema SAP deberán contar con la autorización de Dirección  General. La presente solicitud de modificación de precios y descuentos, no representa un acuerdo comercial en sí misma, sin su debida autorización. La presente solicitud debe ser llenada exclusivamente por el vendedor con la finalidad de prevenir errores durante su aplicación. La firma del Director Comercial &amp; Marketing y el Director General puede ser sustituida por su confirmación vía correo electrónico. Los descuentos adicionales a los máximos por línea deben contar en todo momento con la autorización del Director Comercial y del Director General con forme al comunicado sobre autorizaciones y descuentos. En caso de ausencia del Director General las autorizaciones de descuentos superiores a los máximos por línea deberán ser escalados con el Ing. Gómez Galvarriato y en su defecto con la Dra. Aurora Gómez. Es compromiso del personal responsable del proceso de modificaciones de descuentos y precios autorizado por la Dirección General, asignar un folio, plasmar la vigencia en el presente formato así como generar su resguardo, también el comunicar dicha información a todos los interesados.&quot;</defaultValue>
    <label>Términos y Condiciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>