force-app/main/default/objects/Folio_de_Descuentos__c/fields/tipo_solicitud__c.field-meta.xml
<CustomField>
    <fullName>tipo_solicitud__c</fullName>
    <label>Tipo de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inicial</fullName>
            </value>
            <value>
                <fullName>Renovacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>