force-app/main/default/objects/Folio_de_Descuentos__c/fields/vigencia_autorizada__c.field-meta.xml
<CustomField>
    <fullName>vigencia_autorizada__c</fullName>
    <label>Vigencia Autorizada</label>
    <type>Date</type>
</CustomField>