force-app/main/default/objects/Folio_de_Descuentos__c/fields/vigencia_solicitada__c.field-meta.xml
<CustomField>
    <fullName>vigencia_solicitada__c</fullName>
    <label>Vigencia Solicitada</label>
    <type>Date</type>
</CustomField>