force-app/main/default/objects/Folio_de_Descuentos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Folio__c</columns>
    <columns>Cuenta__c</columns>
    <columns>vigencia_autorizada__c</columns>
    <columns>asesor_ventas__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>